# 2025_Dashboard

./: DashBoard_AD.py  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt  streamlit_app.py
Models/: cat_best_model_AH.pkl  cat_best_model_BLASTOCYST.pkl  cat_best_model_DI.pkl  cat_best_model_IVF.pkl  lgbm_best_model_AH.pkl  lgbm_best_model_BLASTOCYST.pkl  lgbm_best_model_DI.pkl  lgbm_best_model_IVF.pkl  test_exp_DI.pkl  test_exp_IVF.pkl  xgb_best_model_AH.pkl  xgb_best_model_BLASTOCYST.pkl  xgb_best_model_DI.pkl  xgb_best_model_IVF.pkl
callbacks/: page_callbacks.py
components/: AD_graph.py  AD_table.py  AD_values.py  Baby_Function.py  Baby_Input.py  Baby_dtype.py  Baby_graph_functions.py  Baby_preprocessing.py  FOG_graph.py  FOG_table.py  FOG_values.py  Manitto_values.py  Tab1_explain.py  Tab2_AD.py  Tab3_FOG.py  Tab4_Manitto.py  Tab5_Liver.py  Tab6_Baby.py  liver_graph.py  liver_values.py  mainfunction.py  manittoFunction.py
data/: DI_DI 시술 횟수.csv  DI_DI 임신 횟수.csv  DI_DI 출산 횟수.csv  DI_시술 당시 나이.csv  DI_정자 기증자 나이.csv  IVF_IVF 시술 횟수.csv  IVF_IVF 임신 횟수.csv  IVF_IVF 출산 횟수.csv  IVF_기증자_정자 기증자 나이.csv  IVF_배우자_정자 기증자 나이.csv  IVF_시술 당시 나이.csv  ad_val_corr.csv  basic_analysis.csv  cancer_death.csv  category_new_value.csv  cirrhosis_setting.csv  continuous_new_value.csv  fog_cnt_hour.csv  fog_cnt_month.csv  fog_size_hour.csv  fog_size_month.csv  high_shap.csv  liver_count.csv  liver_perc.csv  low_shap.csv  mid_shap.csv  no_shap.csv  shap_values.csv  simul1.csv  test_X_scaler_anomaly.csv  test_X_scaler_normal.csv  tukey_analysis.csv
layout/: Baby_DI.py  (+5 more)
(+11 files in other folders)
