[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Da-Woon Kim <wise_head@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.18.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
